[package]
name = "bug"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter = { version =  "*", git = "https://github.com/tree-sitter/tree-sitter" }

[build-dependencies]
cc = "1.0.79"
